library routes and controllers added/ Oauth added
